# boxdrawed

./: .gitignore  Cargo.toml
src/: canvas.rs  input_mode.rs  main.rs  pragmata_pro_input.rs  text_area.rs
src/keymap/: azerty.rs  bépo.rs  mod.rs  qwerty.rs
