[package]
edition = "2021"
name = "boxdrawed"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.3", features = ["derive"]}
fontdue = "0.8.0"
lazy_static = "1.4.0"
softbuffer = "0.4.1"
winit = "0.29.15"
